--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,38 +1,86 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7 h100p"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8 h100p"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9 h100p"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js h100p"> <!--<![endif]-->
+<head>
+    {% include 'partials/head.html.partial' %}
+</head>
+<body class="h100p portfolio-browse">
+    <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
 
-        <link rel="stylesheet" href="static/css/normalize.min.css">
-        <link rel="stylesheet" href="static/css/main.css">
+<div class="row h100p">
+    <div class="col-xs-24 col-sm-2 col-md-2 col-lg-6 h100p sidebar sidebar-fixed">
+        <div class="cover-area hidden-xs"></div>
+        <!--
+        <div class="logo-area">
+            <div class="logo">
+                <span>CHI</span> <i class="icon-bubble-4"></i><br><span>CHUNG-YI</span>
+            </div>
+        </div>
+        -->
+        <div class="profile-pic-area visible-lg">
+            <div class="img-circle profile-pic"></div>
+        </div>
+        <div class="menu-area">
+            <ul class="nav nav-pills nav-plain-centered menu-list">
+                <li>
+                    <a href="#"><i class="icon-pen-5"></i></a>
+                    <ul class="nav nav-pills submenu-list">
+                        <li>BLOG</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-heart-11"></i></a>
+                    <ul class="nav nav-pills submenu-list">
+                        <li>USER EXPERIENCE DESIGN</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-window-2"></i></a>
+                    <ul class="nav nav-pills submenu-list">
+                        <li>FRONT-END DEVELOPMENT</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-bookmark-6"></i></a>
+                    <ul class="nav nav-pills submenu-list">
+                        <li>PORTFOLIO</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="icon-envelope-3"></i></a>
+                    <ul class="nav nav-pills submenu-list">
+                        <li>CONTACT</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <footer class="footer-sidebar hidden-xs">
+            <ul class="nav nav-pills nav-plain-centered footer-list">
+                <li><span class="copyright">&copy; 2010 - 2013 Chung-Yi Chi</span> </li>
+            </ul>
+        </footer>
+    </div>
+    <div class="col-sm-20 col-md-20 col-lg-16 col-sm-offset-3 col-md-offset-3 col-lg-offset-7 h100p">
+        <div class="hidden-xs" style="height: 25%; min-height: 200px;"></div>
+        <div class="main pt50">
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Oops! Working on it...</h1>
+                    <p>"You can’t hurry love, and you can’t rush puff pastry, either." - Kathleen Flinn</p>
+                    <p>The new design with my recent works is coming soon. Please take a look at my <a href="http://star.csie.org:8080/~starsirius/portfolio">old portfolio website</a> or <a href="mailto:cychi1210@gmail.com">email</a> me.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-        <script src="static/js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+{% include 'partials/js-libs.html.partial' %}
 
-        <h1>Hello {{project_name}}!</h1>
+{% include 'partials/google-analytics.html.partial' %}
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-
-        <script src="static/js/plugins.js"></script>
-        <script src="static/js/main.js"></script>
-
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+</body>
 </html>
