--- a/resources/templates/portfolio-browse.html
+++ b/resources/templates/portfolio-browse.html
@@ -13,56 +13,7 @@
 
 <div class="row">
     <div class="col-xs-24 col-sm-2 col-md-2 col-lg-6 h100p sidebar sidebar-fixed">
-        <div class="cover-area hidden-xs"></div>
-        <!--
-        <div class="logo-area">
-            <div class="logo">
-                <span>CHI</span> <i class="icon-bubble-4"></i><br><span>CHUNG-YI</span>
-            </div>
-        </div>
-        -->
-        <div class="profile-pic-area visible-lg">
-            <div class="img-circle profile-pic"></div>
-        </div>
-        <div class="menu-area">
-            <ul class="nav nav-pills nav-plain-centered menu-list">
-                <li>
-                    <a href="#"><i class="icon-pen-5"></i></a>
-                    <ul class="nav nav-pills submenu-list">
-                        <li>BLOG</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="icon-heart-11"></i></a>
-                    <ul class="nav nav-pills submenu-list">
-                        <li>USER EXPERIENCE DESIGN</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="icon-window-2"></i></a>
-                    <ul class="nav nav-pills submenu-list">
-                        <li>FRONT-END DEVELOPMENT</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="icon-bookmark-6"></i></a>
-                    <ul class="nav nav-pills submenu-list">
-                        <li>PORTFOLIO</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="icon-envelope-3"></i></a>
-                    <ul class="nav nav-pills submenu-list">
-                        <li>CONTACT</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <footer class="footer-sidebar hidden-xs">
-            <ul class="nav nav-pills nav-plain-centered footer-list">
-                <li><span class="copyright">&copy; 2010 - 2013 Chung-Yi Chi</span> </li>
-            </ul>
-        </footer>
+        {% include 'partials/sidebar.html.partial' %}
     </div>
     <div class="col-sm-20 col-md-20 col-lg-16 col-sm-offset-3 col-md-offset-3 col-lg-offset-7">
         <div class="main pt50">
