--- a/resources/templates/portfolio-browse.html
+++ b/resources/templates/portfolio-browse.html
@@ -20,9 +20,8 @@
             <div class="row">
                 <div class="col-sm-24 col-md-24 col-lg-24">
                     <ol class="breadcrumb">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Library</a></li>
-                        <li class="active">Data</li>
+                        <li><a href="{{url_for('index')}}">Home</a></li>
+                        <li class="active">Portfolio</li>
                     </ol>
                 </div>
             </div>
