Add basic contact page.

--- a/resources/static/less/style.less
+++ b/resources/static/less/style.less
@@ -13,5 +13,6 @@
 @import "browse.less";
 @import "portfolio-browse.less";
 @import "portfolio-work.less";
+@import "contact.less";
 @import "footer-admin.less";
 @import "admin.less";
