Basic home page.

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -20,9 +20,10 @@
         <div class="main pt50">
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Oops! Working on it...</h1>
-                    <p>"You can’t hurry love, and you can’t rush puff pastry, either." - Kathleen Flinn</p>
-                    <p>The new design with my recent works is coming soon. Please take a look at my <a href="http://star.csie.org:8080/~starsirius/portfolio">old portfolio website</a> or <a href="mailto:cychi1210@gmail.com">email</a> me.</p>
+                    <h1>I'm { Chung-Yi Chi }</h1>
+                    <p></p>
+                    <p>The new design with my recent works is coming soon. I will share what I've done and my thoughts about User Exeprience and Front-end Development here.</p>
+                    <p>In the mean time, please take a look at my <a href="{{url_for('browse_portfolio')}}">portfolio</a> and feel free to <a href="{{url_for('contact')}}">contact</a> me.</p>
                 </div>
             </div>
         </div>
