Replace the profile pic in the sidebar with name.

--- a/resources/static/less/global.less
+++ b/resources/static/less/global.less
@@ -142,6 +142,18 @@
     font-style: normal;
 }
 
+// Bevan 
+@font-face {
+    font-family: 'Bevan';
+    src: url('@{fontBaseUrl}/bevan/bevan_rg-webfont.eot');
+    src: url('@{fontBaseUrl}/bevan/bevan_rg-webfont.eot?#iefix') format('embedded-opentype'),
+         url('@{fontBaseUrl}/bevan/bevan_rg-webfont.woff') format('woff'),
+         url('@{fontBaseUrl}/bevan/bevan_rg-webfont.ttf') format('truetype'),
+         url('@{fontBaseUrl}/bevan/bevan_rg-webfont.svg#BevanRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 // Body
 // --------------------------------------------------
 body {
