Wording changes on the home page.

--- a/resources/static/less/style.less
+++ b/resources/static/less/style.less
@@ -9,7 +9,7 @@
 
 // Page-specific less files
 @import "style-guide.less";
-//@import "home.less";
+@import "home.less";
 @import "browse.less";
 @import "portfolio-browse.less";
 @import "portfolio-work.less";
