Change the home page wording in the breadcrumbs to my name.

--- a/resources/templates/portfolio-work.html
+++ b/resources/templates/portfolio-work.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-sm-20 col-md-20 col-lg-15 col-sm-offset-3 col-md-offset-3 col-lg-offset-5">
                         <ol class="breadcrumb">
-                            <li><a href="{{url_for('index')}}">Home</a></li>
+                            <li><a href="{{url_for('index')}}">Chung-Yi Chi</a></li>
                             <li><a href="{{url_for('browse_portfolio')}}">Portfolio</a></li>
                             <li class="active">{{work.post.title}}</li>
                         </ol>
