--- a/resources/templates/contact.html
+++ b/resources/templates/contact.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-sm-24 col-md-24 col-lg-24">
                     <ol class="breadcrumb">
-                        <li><a href="{{url_for('index')}}">Home</a></li>
+                        <li><a href="{{url_for('index')}}">Chung-Yi Chi</a></li>
                         <li class="active">Contact</li>
                     </ol>
                 </div>
