Remove border of thumnails. Use dark background for the captions.

--- a/resources/static/less/bootstrap-overwrite/scaffolding.less
+++ b/resources/static/less/bootstrap-overwrite/scaffolding.less
@@ -11,4 +11,6 @@
 .img-thumbnail {
   .transition(all .15s ease-in-out);
   .box-shadow(0 1px 3px 0 rgba(0,0,0,.2));
+  padding: 0;
+  border-radius: 0;
 }
