--- a/resources/static/less/portfolio-work.less
+++ b/resources/static/less/portfolio-work.less
@@ -34,6 +34,7 @@
         img {
             margin-top: 20px;
             width: 100%;
+            border: 1px solid @gray-lighter;
         }
     }
 
